# tetradflow

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  spaces-deploy.yml
docs/: architecture.d2  architecture.md  disclaimer.md  human_gate_protocol.md  p0_checklist.md
eval/: human_eval_4divergent.md  manual_labels_template.json  seed_60_template.md
scripts/: ablate_orthogonality.py  human_gate_check.py  identify_axes_cca.py  push_to_hf.py  release_pipeline.sh  train_sae.py
spaces/: README.md  app.py  requirements.txt
src/tetradflow/: __init__.py  cca.py  cli.py  gauge.py  hooks.py  ode.py  pipeline.py  sae.py
src/tetradflow/eval/: __init__.py  ass.py  direct_metrics.py  human_eval.py
tests/: test_ablate_orthogonality.py  test_cca.py  test_gauge.py  test_hooks.py  test_ode.py  test_pipeline.py  test_sae.py
